--- a/Clacess.html
+++ b/Clacess.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0056)file:///C:/ketan/Internship/Healet/healet-html/Clacess.html -->
+<!-- saved from url=(0056)Clacess.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!-- Basic -->
   
@@ -7,7 +7,7 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Site Metas -->
-  <link rel="icon" href="file:///C:/ketan/Internship/Healet/healet-html/images/favicon.png" type="image/gif">
+  <link rel="icon" href="images/favicon.png" type="image/gif">
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -31,7 +31,7 @@
   <header class="header_section innerpage_header">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
-        <a class="navbar-brand" href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+        <a class="navbar-brand" href="Clacess.html">
           <span>
             Aarul Jewellery
           </span>
@@ -46,10 +46,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">Home</a>
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/about.html">About</a>
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">Shop</a>
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">Clacess</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="shop.html">Shop</a>
+                <a href="Clacess.html">Clacess</a>
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
               <p>
                 Immerse yourself in the rich cultural heritage of Maharashtra by learning the art of Nath designing. Our classes offer hands-on training to craft elegant and authentic Marathi traditional Nath, blending intricate design techniques with cultural insights. Perfect for enthusiasts and artisans who wish to preserve this timeless tradition.
               </p>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/Traditional_Jewellery_Design.html">
+              <a href="Traditional_Jewellery_Design.html">
                 Read More
               </a>
             </div>
@@ -108,7 +108,7 @@
               <p>
                 Explore the fascinating world of traditional jewelry design with our expert-led classes. Master the art of creating stunning handmade jewelry, using both classic and contemporary techniques. Whether you're a beginner or an aspiring professional, this course equips you to design exquisite pieces that celebrate elegance and creativity.
               </p>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/marathi_nath_class.html">
+              <a href="marathi_nath_class.html">
                 Read More
               </a>
             </div>
@@ -126,7 +126,7 @@
       <div class="row info_form_social_row">
         <div class="col-md-8 col-lg-9">
           <div class="info_form">
-            <form action="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <form action="Clacess.html">
               <input type="email" placeholder="Enter your email">
               <button>
                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
@@ -137,13 +137,13 @@
         <div class="col-md-4 col-lg-3">
 
           <div class="social_box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <a href="Clacess.html">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <a href="Clacess.html">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <a href="Clacess.html">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </div>
@@ -156,10 +156,10 @@
               Menu
             </h4>
             <div class="info_links_menu">
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">Home</a>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/about.html">About</a>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">Shop</a>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">Clacess</a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="shop.html">Shop</a>
+              <a href="Clacess.html">Clacess</a>
             </div>
           </div>
         </div>
@@ -199,19 +199,19 @@
             Contact Us
           </h4>
           <div class="info_contact">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <a href="Clacess.html">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
                 Location
               </span>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <a href="Clacess.html">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
                 Call +01 1234567890
               </span>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">
+            <a href="Clacess.html">
               <i class="fa fa-envelope"></i>
               <span>
                 demo@gmail.com
