--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0057)file:///C:/ketan/Internship/Healet/healet-html/index.html -->
+<!-- saved from url=(0057)index.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!-- Basic -->
   
@@ -7,7 +7,7 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Site Metas -->
-  <link rel="icon" href="file:///C:/ketan/Internship/Healet/healet-html/images/favicon.png" type="image/gif">
+  <link rel="icon" href="images/favicon.png" type="image/gif">
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -31,7 +31,7 @@
   <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
-        <a class="navbar-brand" href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+        <a class="navbar-brand" href="index.html">
           <span>
             Aarul Jewellery
           </span>
@@ -46,10 +46,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">Home</a>
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/about.html">About</a>
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">Shop</a>
-                <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">Clacess</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="shop.html">Shop</a>
+                <a href="Clacess.html">Clacess</a>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
     <p>
       Aarul Jewellery specializes in crafting exquisite handmade jewelry that embodies elegance and individuality. We also offer comprehensive online classes to share our passion and skills, empowering aspiring artisans to create their own beautiful pieces from the comfort of their homes.
     </p>
-    <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html" class="slider-link">Shop Now</a>
+    <a href="shop.html" class="slider-link">Shop Now</a>
   </div>
 </section>
 
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p1.png" alt="">
               </div>
@@ -118,7 +118,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p2.png" alt="">
               </div>
@@ -143,7 +143,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p3.png" alt="">
               </div>
@@ -168,7 +168,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p4.png" alt="">
               </div>
@@ -193,7 +193,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p5.png" alt="">
               </div>
@@ -218,7 +218,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p6.png" alt="">
               </div>
@@ -243,7 +243,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p7.png" alt="">
               </div>
@@ -268,7 +268,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <div class="img-box">
                 <img src="./index_files/p8.png" alt="">
               </div>
@@ -293,7 +293,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">
+        <a href="shop.html">
           View All Products
         </a>
       </div>
@@ -324,7 +324,7 @@
             <p>Welcome to Aarul Jewellery, where tradition meets innovation! Our shop is a treasure trove of exquisite handmade jewelry, crafted with love and precision. Each piece is a testament to our dedication to quality and artistry, ensuring that you find something truly unique and special.
 			<br>But we don't just stop at selling beautiful jewelry. At Aarul Jewellery, we believe in sharing our passion and skills with the world. That's why we offer online classes, where you can learn the art of jewelry making from the comfort of your home. Whether you're a beginner or looking to refine your skills, our expert instructors will guide you through every step of the process.
 			<br>Join us at Aarul Jewellery and become a part of our creative community. Discover the joy of wearing and creating stunning jewelry that tells your story.</p>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/about.html">
+            <a href="about.html">
               Read More
             </a>
           </div>
@@ -350,7 +350,7 @@
               <h2>
                 Upto 15% Off
               </h2>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">
+              <a href="shop.html">
                 Shop Now
               </a>
             </div>
@@ -363,7 +363,7 @@
               <h2>
                 Upto 10% Off
               </h2>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">
+              <a href="shop.html">
                 Shop Now
               </a>
             </div>
@@ -374,7 +374,7 @@
               <h2>
                 Upto 20% Off
               </h2>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">
+              <a href="shop.html">
                 Shop Now
               </a>
             </div>
@@ -412,7 +412,7 @@
               <p>
                 Immerse yourself in the rich cultural heritage of Maharashtra by learning the art of Nath designing. Our classes offer hands-on training to craft elegant and authentic Marathi traditional Nath, blending intricate design techniques with cultural insights. Perfect for enthusiasts and artisans who wish to preserve this timeless tradition.
               </p>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/marathi_nath_class.html">
+              <a href="marathi_nath_class.html">
                 Read More
               </a>
             </div>
@@ -434,7 +434,7 @@
               <p>
                 Explore the fascinating world of traditional jewelry design with our expert-led classes. Master the art of creating stunning handmade jewelry, using both classic and contemporary techniques. Whether you're a beginner or an aspiring professional, this course equips you to design exquisite pieces that celebrate elegance and creativity.
               </p>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/Traditional_Jewellery_Design.html">
+              <a href="Traditional_Jewellery_Design.html">
                 Read More
               </a>
             </div>
@@ -531,11 +531,11 @@
           </div>
         </div>
         <div class="carousel_btn-container">
-          <a class="carousel-control-prev" href="file:///C:/ketan/Internship/Healet/healet-html/index.html#carouselExample2Controls" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="index.html#carouselExample2Controls" role="button" data-slide="prev">
             <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="file:///C:/ketan/Internship/Healet/healet-html/index.html#carouselExample2Controls" role="button" data-slide="next">
+          <a class="carousel-control-next" href="index.html#carouselExample2Controls" role="button" data-slide="next">
             <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
             <span class="sr-only">Next</span>
           </a>
@@ -552,7 +552,7 @@
       <div class="row info_form_social_row">
         <div class="col-md-8 col-lg-9">
           <div class="info_form">
-            <form action="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <form action="index.html">
               <input type="email" placeholder="Enter your email">
               <button>
                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
@@ -563,13 +563,13 @@
         <div class="col-md-4 col-lg-3">
 
           <div class="social_box">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </div>
@@ -582,10 +582,10 @@
               Menu
             </h4>
             <div class="info_links_menu">
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">Home</a>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/about.html">About</a>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/shop.html">Shop</a>
-              <a href="file:///C:/ketan/Internship/Healet/healet-html/Clacess.html">Clacess</a>
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="shop.html">Shop</a>
+              <a href="Clacess.html">Clacess</a>
             </div>
           </div>
         </div>
@@ -625,19 +625,19 @@
             Contact Us
           </h4>
           <div class="info_contact">
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
                 Ankleshwar, Gujarat, 393001
               </span>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
                 Call +91 7385131030
               </span>
             </a>
-            <a href="file:///C:/ketan/Internship/Healet/healet-html/index.html">
+            <a href="index.html">
               <i class="fa fa-envelope"></i>
               <span>
                 demo@gmail.com
@@ -667,7 +667,7 @@
   <!-- jQery -->
   <script src="./index_files/jquery-3.4.1.min.js.download"></script>
   <!-- bootstrap js -->
-  <script src="file:///C:/ketan/Internship/Healet/healet-html/js/bootstrap.js"></script>
+  <script src="js/bootstrap.js"></script>
   <!-- custom js -->
   <script src="./index_files/custom.js.download"></script>
 
