--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="overlay-content">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="shop.html">Shop</a>
+                <a href="Shop.html">Shop</a>
                 <a href="Clacess.html">Clacess</a>
               </div>
             </div>
@@ -74,7 +74,7 @@
     <p>
       Aarul Jewellery specializes in crafting exquisite handmade jewelry that embodies elegance and individuality. We also offer comprehensive online classes to share our passion and skills, empowering aspiring artisans to create their own beautiful pieces from the comfort of their homes.
     </p>
-    <a href="shop.html" class="slider-link">Shop Now</a>
+    <a href="Shop.html" class="slider-link">Shop Now</a>
   </div>
 </section>
 
