--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <!-- end slider section -->
 
-  <!-- shop section -->
+  <!-- Shop section -->
 
   <section class="shop_section layout_padding">
     <div class="container">
@@ -293,14 +293,14 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="shop.html">
+        <a href="Shop.html">
           View All Products
         </a>
       </div>
     </div>
   </section>
 
-  <!-- end shop section -->
+  <!-- end Shop section -->
 
   <!-- about section -->
 
@@ -321,7 +321,7 @@
                 About Us
               </h2>
             </div>
-            <p>Welcome to Aarul Jewellery, where tradition meets innovation! Our shop is a treasure trove of exquisite handmade jewelry, crafted with love and precision. Each piece is a testament to our dedication to quality and artistry, ensuring that you find something truly unique and special.
+            <p>Welcome to Aarul Jewellery, where tradition meets innovation! Our Shop is a treasure trove of exquisite handmade jewelry, crafted with love and precision. Each piece is a testament to our dedication to quality and artistry, ensuring that you find something truly unique and special.
 			<br>But we don't just stop at selling beautiful jewelry. At Aarul Jewellery, we believe in sharing our passion and skills with the world. That's why we offer online classes, where you can learn the art of jewelry making from the comfort of your home. Whether you're a beginner or looking to refine your skills, our expert instructors will guide you through every step of the process.
 			<br>Join us at Aarul Jewellery and become a part of our creative community. Discover the joy of wearing and creating stunning jewelry that tells your story.</p>
             <a href="about.html">
@@ -350,7 +350,7 @@
               <h2>
                 Upto 15% Off
               </h2>
-              <a href="shop.html">
+              <a href="Shop.html">
                 Shop Now
               </a>
             </div>
@@ -363,7 +363,7 @@
               <h2>
                 Upto 10% Off
               </h2>
-              <a href="shop.html">
+              <a href="Shop.html">
                 Shop Now
               </a>
             </div>
@@ -374,7 +374,7 @@
               <h2>
                 Upto 20% Off
               </h2>
-              <a href="shop.html">
+              <a href="Shop.html">
                 Shop Now
               </a>
             </div>
@@ -584,7 +584,7 @@
             <div class="info_links_menu">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
-              <a href="shop.html">Shop</a>
+              <a href="Shop.html">Shop</a>
               <a href="Clacess.html">Clacess</a>
             </div>
           </div>
