--- a/Clacess.html
+++ b/Clacess.html
@@ -48,7 +48,7 @@
               <div class="overlay-content">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="shop.html">Shop</a>
+                <a href="Shop.html">Shop</a>
                 <a href="Clacess.html">Clacess</a>
               </div>
             </div>
@@ -158,7 +158,7 @@
             <div class="info_links_menu">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
-              <a href="shop.html">Shop</a>
+              <a href="Shop.html">Shop</a>
               <a href="Clacess.html">Clacess</a>
             </div>
           </div>
