--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
               <div class="overlay-content">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="shop.html">Shop</a>
+                <a href="Shop.html">Shop</a>
                 <a href="blog.html">Blog</a>
               </div>
             </div>
@@ -77,7 +77,7 @@
                 About Us
               </h2>
             </div>
-            <p>Welcome to Aarul Jewellery, where tradition meets innovation! Our shop is a treasure trove of exquisite handmade jewelry, crafted with love and precision. Each piece is a testament to our dedication to quality and artistry, ensuring that you find something truly unique and special.
+            <p>Welcome to Aarul Jewellery, where tradition meets innovation! Our Shop is a treasure trove of exquisite handmade jewelry, crafted with love and precision. Each piece is a testament to our dedication to quality and artistry, ensuring that you find something truly unique and special.
 			<br>But we don't just stop at selling beautiful jewelry. At Aarul Jewellery, we believe in sharing our passion and skills with the world. That's why we offer online classes, where you can learn the art of jewelry making from the comfort of your home. Whether you're a beginner or looking to refine your skills, our expert instructors will guide you through every step of the process.
 			<br>Join us at Aarul Jewellery and become a part of our creative community. Discover the joy of wearing and creating stunning jewelry that tells your story.</p>
             <a href="about.html">
@@ -129,7 +129,7 @@
             <div class="info_links_menu">
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
-              <a href="shop.html">Shop</a>
+              <a href="Shop.html">Shop</a>
               <a href="blog.html">Blog</a>
             </div>
           </div>
