--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Healet</title>
 
@@ -81,226 +82,146 @@
 
   <!-- end slider section -->
 
-  <!-- Shop section -->
+<!-- Shop section -->
 
-  <section class="shop_section layout_padding">
-    <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          Latest Products
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p1.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Necklace
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $200
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p2.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Necklace
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $300
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p3.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Necklace
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $110
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p4.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Ring
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $45
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p5.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Ring
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $95
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p6.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Earrings
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $70
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p7.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Earrings
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $400
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="index.html">
-              <div class="img-box">
-                <img src="./index_files/p8.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Necklace
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $450
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
+<section class="shop_section layout_padding">
+  <div class="container">
+    <div class="heading_container heading_center">
+      <h2>
+        Latest Products
+      </h2>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=101">
+            <div class="img-box">
+              <img src="./index_files/p1.png" alt="Elegant Necklace">
+            </div>
+            <div class="detail-box">
+              <h6>Elegant Necklace</h6>
+              <h6>Price <span>$200</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
         </div>
       </div>
-      <div class="btn-box">
-        <a href="Shop.html">
-          View All Products
-        </a>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=102">
+            <div class="img-box">
+              <img src="./index_files/p2.png" alt="Classic Necklace">
+            </div>
+            <div class="detail-box">
+              <h6>Classic Necklace</h6>
+              <h6>Price <span>$300</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=103">
+            <div class="img-box">
+              <img src="./index_files/p3.png" alt="Stylish Necklace">
+            </div>
+            <div class="detail-box">
+              <h6>Stylish Necklace</h6>
+              <h6>Price <span>$110</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=104">
+            <div class="img-box">
+              <img src="./index_files/p4.png" alt="Elegant Ring">
+            </div>
+            <div class="detail-box">
+              <h6>Elegant Ring</h6>
+              <h6>Price <span>$45</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=105">
+            <div class="img-box">
+              <img src="./index_files/p5.png" alt="Premium Ring">
+            </div>
+            <div class="detail-box">
+              <h6>Premium Ring</h6>
+              <h6>Price <span>$95</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=106">
+            <div class="img-box">
+              <img src="./index_files/p6.png" alt="Chic Earrings">
+            </div>
+            <div class="detail-box">
+              <h6>Chic Earrings</h6>
+              <h6>Price <span>$70</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=107">
+            <div class="img-box">
+              <img src="./index_files/p7.png" alt="Luxury Earrings">
+            </div>
+            <div class="detail-box">
+              <h6>Luxury Earrings</h6>
+              <h6>Price <span>$400</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="box">
+          <a href="Shop.html?id=108">
+            <div class="img-box">
+              <img src="./index_files/p8.png" alt="Royal Necklace">
+            </div>
+            <div class="detail-box">
+              <h6>Royal Necklace</h6>
+              <h6>Price <span>$450</span></h6>
+            </div>
+            <div class="new"><span>New</span></div>
+          </a>
+        </div>
       </div>
     </div>
-  </section>
 
-  <!-- end Shop section -->
+    <div class="btn-box">
+      <a href="Shop.html">
+        View All Products
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- end Shop section -->
 
   <!-- about section -->
 
@@ -446,105 +367,112 @@
 
   <!-- end Clacess section -->
 
-  <!-- client section -->
+<!-- client section -->
+<section class="client_section layout_padding">
 
-  <section class="client_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Testimonial
-        </h2>
-      </div>
-      <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row">
-              <div class="col-md-11 col-lg-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="./index_files/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="name">
-                      <h6>
-                        Samantha Jonas
-                      </h6>
-                    </div>
-                    <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
-                    </p>
-                    <i class="fa fa-quote-left" aria-hidden="true"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-md-11 col-lg-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="./index_files/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="name">
-                      <h6>
-                        Samantha Jonas
-                      </h6>
-                    </div>
-                    <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
-                    </p>
-                    <i class="fa fa-quote-left" aria-hidden="true"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-md-11 col-lg-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="./index_files/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="name">
-                      <h6>
-                        Samantha Jonas
-                      </h6>
-                    </div>
-                    <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
-                    </p>
-                    <i class="fa fa-quote-left" aria-hidden="true"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <!-- Add Review Form -->
+    <div class="review_form mt-5">
+      <h3 class="text-center" style="color:#fff;">Add Your Review</h3>
+      <form id="reviewForm" class="mt-4">
+        <div class="form-group">
+          <input type="text" id="reviewerName" class="form-control custom-input" placeholder="Your Name" required>
         </div>
-        <div class="carousel_btn-container">
-          <a class="carousel-control-prev" href="index.html#carouselExample2Controls" role="button" data-slide="prev">
-            <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="index.html#carouselExample2Controls" role="button" data-slide="next">
-            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
-          </a>
+        <div class="form-group">
+          <textarea id="reviewText" class="form-control custom-input" placeholder="Write your review" required></textarea>
         </div>
-      </div>
+        <div class="text-center">
+          <button type="submit" class="btn custom-btn">Submit Review</button>
+        </div>
+      </form>
     </div>
-  </section>
+  </div>
+</section>
+<!-- end client section -->
 
-  <!-- end client section -->
+<!-- Custom Styling -->
+<style>
+.review_form {
+  background-color: #2c2c2c; /* match theme */
+  padding: 20px;
+  border-radius: 8px;
+  margin: 30px auto;
+  max-width: 600px; /* limit the width */
+  text-align: center;
+}
+
+.review_form h3 {
+  font-weight: bold;
+  margin-bottom: 15px;
+  font-size: 22px; /* smaller heading */
+}
+
+.custom-input {
+  background-color: #1a1a1a;
+  border: 1px solid #ffb566;
+  color: #fff;
+  padding: 8px 12px; /* smaller input size */
+  font-size: 14px;
+}
+
+.custom-input::placeholder {
+  color: #aaa;
+}
+
+.custom-btn {
+  background-color: #ff8800;
+  border: none;
+  padding: 8px 20px; /* smaller button */
+  color: #fff;
+  font-weight: 600;
+  border-radius: 5px;
+  font-size: 14px;
+  transition: 0.3s;
+}
+
+.custom-btn:hover {
+  background-color: #cc6e00;
+}
+</style>
+
+<!-- Script to handle reviews -->
+<script>
+  document.getElementById("reviewForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const name = document.getElementById("reviewerName").value;
+    const text = document.getElementById("reviewText").value;
+
+    if(name && text) {
+      const newReview = `
+        <div class="carousel-item">
+          <div class="row">
+            <div class="col-md-11 col-lg-10 mx-auto">
+              <div class="box">
+                <div class="img-box">
+                  <img src="./index_files/client.jpg" alt="">
+                </div>
+                <div class="detail-box">
+                  <div class="name">
+                    <h6>${name}</h6>
+                  </div>
+                  <p>${text}</p>
+                  <i class="fa fa-quote-left" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      `;
+
+      document.getElementById("reviewList").insertAdjacentHTML("beforeend", newReview);
+
+      // Reset form
+      document.getElementById("reviewForm").reset();
+      alert("Thank you for your review!");
+    }
+  });
+</script>
+
 
   <!-- info section -->
   <section class="info_section layout_padding2">
