--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
 <!-- Custom Styling -->
 <style>
 .review_form {
-  background-color: #2c2c2c; /* match theme */
-  padding: 20px;
-  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;   /* limit on large screens */
   margin: 30px auto;
-  max-width: 600px; /* limit the width */
-  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
 }
+
 
 .review_form h3 {
   font-weight: bold;
@@ -432,6 +432,18 @@
 .custom-btn:hover {
   background-color: #cc6e00;
 }
+
+img, .img-box img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* Prevent horizontal overflow */
+body, html {
+  overflow-x: hidden;
+}
+
 </style>
 
 <!-- Script to handle reviews -->
