--- a/about.html
+++ b/about.html
@@ -94,32 +94,6 @@
   <!-- info section -->
   <section class="info_section layout_padding2">
     <div class="container">
-      <div class="row info_form_social_row">
-        <div class="col-md-8 col-lg-9">
-          <div class="info_form">
-            <form action="about.html">
-              <input type="email" placeholder="Enter your email">
-              <button>
-                <i class="fa fa-arrow-right" aria-hidden="true"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-3">
-
-          <div class="social_box">
-            <a href="about.html">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="about.html">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="about.html">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
-      </div>
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
           <div class="info_links">
@@ -130,39 +104,8 @@
               <a href="index.html">Home</a>
               <a href="about.html">About</a>
               <a href="Shop.html">Shop</a>
-              <a href="blog.html">Blog</a>
+              <a href="Clacess.html">Clacess</a>
             </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_insta">
-            <h4>
-              Instagram
-            </h4>
-            <div class="insta_box">
-              <div class="img-box">
-                <img src="./about_files/p1.png" alt="">
-              </div>
-              <p>
-                long established fact that a reader
-              </p>
-            </div>
-            <div class="insta_box">
-              <div class="img-box">
-                <img src="./about_files/p2.png" alt="">
-              </div>
-              <p>
-                long established fact that a reader
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_detail">
-            <h4>
-              About Us
-            </h4>
-            <p class="mb-0">At Aarul.online, we specialize in creating unique, handmade jewelry that reflects individuality and elegance. Alongside our beautiful designs, we offer Jewelry Design Coaching Classes</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
@@ -170,19 +113,19 @@
             Contact Us
           </h4>
           <div class="info_contact">
-            <a href="about.html">
+            <a href="index.html">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                Ankleshwar, Gujarat, 393001
               </span>
             </a>
-            <a href="about.html">
+            <a href="index.html">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
+                Call +91 7385131030
               </span>
             </a>
-            <a href="about.html">
+            <a href="index.html">
               <i class="fa fa-envelope"></i>
               <span>
                 demo@gmail.com
