--- a/Shop.html
+++ b/Shop.html
@@ -647,7 +647,7 @@
             const orderPageUrl = `order.html?name=${encodeURIComponent(name)}&price=${encodeURIComponent(price)}&description=${encodeURIComponent(description)}`;
 
             // Redirect to order Page
-            window.location.href = orderPageUrl;
+            window.location.href="order.html";
         });
     </script>
     <script>
