--- a/Shop.html
+++ b/Shop.html
@@ -158,12 +158,50 @@
         color: #fff;
     }
 
-    .sidebar {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between; /* Ensures Home Page button is at the bottom */
-        height: 100vh; /* Full height for sidebar */
-    }
+			.sidebar {
+		  width: 250px;
+		  min-height: 100vh;
+		  background: #2d2d2d;
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: space-between; /* pushes Home Page button to bottom */
+		}
+
+		.sidebar button {
+		  margin: 10px;
+		}
+		
+				@media (max-width: 768px) {
+		  .sidebar {
+			width: 100%;
+			min-height: auto;
+			flex-direction: row;
+			justify-content: space-around;
+			padding: 10px;
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			z-index: 1000;
+		  }
+
+		  .sidebar button {
+			flex: 1;
+			margin: 5px;
+		  }
+		}
+		
+				@media (max-width: 768px) {
+		  .home-button {
+			position: fixed;
+			bottom: 15px;
+			left: 50%;
+			transform: translateX(-50%);
+			z-index: 2000;
+		  }
+		}
+
+
+
 
 		
 		/* Product details modal */
